
syntax = "proto3";

package surrealdb.value;

import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

message Value {
    oneof inner {
        Null null = 1;
        // Boolean boolean = 2;
        bool bool = 2;
        int64 int = 3;
        double float = 4;
        string decimal = 5;
        string strand = 6;
        google.protobuf.Duration duration = 7;
        google.protobuf.Timestamp datetime = 8;
        string uuid = 9;
        Array array = 10;
        Object object = 11;
        Geometry geometry = 12;
        bytes bytes = 13;
        RecordId record_id = 14;
        File file = 15;
    }
}


message EmptyMessage {}

message Null {}

message Duration {
    uint64 seconds = 1;
    uint32 nanos = 2;
}

message Datetime {
    uint64 seconds = 1;
    uint32 nanos = 2;
}

message Array {
    repeated Value values = 1;
}

message Object {
    map<string, Value> values = 1;
}

message Geometry {
    oneof inner {
        Point point = 1;
        LineString line = 2;
        Polygon polygon = 3;
        MultiPoint multi_point = 4;
        MultiLineString multi_line = 5;
        MultiPolygon multi_polygon = 6;
        GeometryCollection collection = 7;
    }
}

message Point {
    double x = 1;
    double y = 2;
}

message LineString {
    repeated Point points = 1;
}

message Polygon {
    LineString exterior = 1;
    repeated LineString interiors = 2;
}

message MultiPoint {
    repeated Point points = 1;
}

message MultiLineString {
    repeated LineString lines = 1;
}

message MultiPolygon {
    repeated Polygon polygons = 1;
}

message GeometryCollection {
    repeated Geometry geometries = 1;
}

message RecordId {
    string table = 1;
    Id id = 2;
}

message Id {
    oneof inner {
        int64 number = 1;
        string string = 2;
        string uuid = 3;
        Array array = 4;
        // TODO(stu): I think everything below here should be removed?
        // Object object = 5;
        // Gen generate = 6;
        // IdRange range = 7;
    }
}

enum Gen {
    GEN_RAND = 0;
    GEN_ULID = 1;
    GEN_UUID = 2;
}


message IdRange {
    IdBound beg = 1;
    IdBound end = 2;
}

message IdBound {
    oneof inner {
        Id included = 1;
        Id excluded = 2;
        Null unbounded = 3;
    }
}

message File {
    string bucket = 1;
    string key = 2;
}